commit the modified code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Plastic Dection</h1>
+    <h1>Plastic Detection</h1>
     <nav>
       <ul>
         <li><a href="#about-us">關於我們</a></li>
@@ -16,11 +16,10 @@
     </nav>
   </header>
   <div class="container">
-    <img src="C:\Users\User\Documents\plastic user interface\TW.png" >
+    <img src="tw.svg" >
   </div>
   <section id="about-us">
     <h2>About Us</h2>
-    <!-- Content for About Us section -->
   </section>
 </body>
 </html>
